# pycopanlpjml

./: .flake8  .readthedocs.yml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: build-docs-artifact.yml  check.yml
docs/source/: conf.py  index.md
pycopanlpjml/: __init__.py  cell.py  component.py  data.py  decorator.py  documentation.py  mixin.py  region.py  world.py
scripts/: update_citation.py
tests/: test_lpjml_coupling.py
tests/data/: config_coupled_test.json
